add lazy loading and fix colors

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <header>
     <div class="header_logo_block">
-        <img src="assets/img/logo.webp" alt="">
+        <img loading="lazy" src="assets/img/logo.webp" alt="">
     </div>
     <button class="header_menu_burger" id="burger_menu_button">
         <span class="header_menu_burger_img"></span>
@@ -35,27 +35,27 @@
         </div>
         <div class="top_about_right">
             <div class="top_about_right_img_block">
-                <img src="assets/img/top_img.webp" alt="top_img">
+                <img loading="lazy" src="assets/img/top_img.webp" alt="top_img">
             </div>
         </div>
     </section>
 
     <section class="gallery" id="gallerySlider">
         <div class="gallery_row">
-            <img src="assets/img/gallery/img.png" alt="" title="">
-            <img src="assets/img/gallery/img_1.png" alt="" title="">
-            <img src="assets/img/gallery/img_2.png" alt="" title="">
-            <img src="assets/img/gallery/img_3.png" alt="" title="">
-            <img src="assets/img/gallery/img_4.png" alt="" title="">
-            <img src="assets/img/gallery/img_5.png" alt="" title="">
+            <img loading="lazy" src="assets/img/gallery/img.png" alt="" title="">
+            <img loading="lazy" src="assets/img/gallery/img_1.png" alt="" title="">
+            <img loading="lazy" src="assets/img/gallery/img_2.png" alt="" title="">
+            <img loading="lazy" src="assets/img/gallery/img_3.png" alt="" title="">
+            <img loading="lazy" src="assets/img/gallery/img_4.png" alt="" title="">
+            <img loading="lazy" src="assets/img/gallery/img_5.png" alt="" title="">
         </div>
         <div class="gallery_row">
-            <img src="assets/img/gallery/img_6.png" alt="" title="">
-            <img src="assets/img/gallery/img_7.png" alt="" title="">
-            <img src="assets/img/gallery/img_8.png" alt="" title="">
-            <img src="assets/img/gallery/img_9.png" alt="" title="">
-            <img src="assets/img/gallery/img_10.png" alt="" title="">
-            <img src="assets/img/gallery/img_11.png" alt="" title="">
+            <img loading="lazy" src="assets/img/gallery/img_6.png" alt="" title="">
+            <img loading="lazy" src="assets/img/gallery/img_7.png" alt="" title="">
+            <img loading="lazy" src="assets/img/gallery/img_8.png" alt="" title="">
+            <img loading="lazy" src="assets/img/gallery/img_9.png" alt="" title="">
+            <img loading="lazy" src="assets/img/gallery/img_10.png" alt="" title="">
+            <img loading="lazy" src="assets/img/gallery/img_11.png" alt="" title="">
         </div>
     </section>
 
@@ -72,7 +72,7 @@
         <h2>Наши курсы</h2>
         <div class="course_grid">
             <div class="course">
-                <img src="assets/img/courses/course_1.png" alt="">
+                <img loading="lazy" src="assets/img/courses/course_1.png" alt="">
                 <p class="course_title">Нотная грамота</p>
                 <p class="course_description">Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free
                     Watermark Remover Online также
@@ -80,7 +80,7 @@
                 <a class="button" href="#contacts">Подробнее</a>
             </div>
             <div class="course">
-                <img src="assets/img/courses/course_1.png" alt="">
+                <img loading="lazy" src="assets/img/courses/course_1.png" alt="">
                 <p class="course_title">Нотная грамота</p>
                 <p class="course_description">Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free
                     Watermark Remover Online также
@@ -88,7 +88,7 @@
                 <a class="button" href="#contacts">Подробнее</a>
             </div>
             <div class="course">
-                <img src="assets/img/courses/course_1.png" alt="">
+                <img loading="lazy" src="assets/img/courses/course_1.png" alt="">
                 <p class="course_title">Нотная грамота</p>
                 <p class="course_description">Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free
                     Watermark Remover Online также
@@ -96,7 +96,7 @@
                 <a class="button" href="#contacts">Подробнее</a>
             </div>
             <div class="course">
-                <img src="assets/img/courses/course_1.png" alt="">
+                <img loading="lazy" src="assets/img/courses/course_1.png" alt="">
                 <p class="course_title">Нотная грамота</p>
                 <p class="course_description">Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free
                     Watermark Remover Online также
@@ -104,7 +104,7 @@
                 <a class="button" href="#contacts">Подробнее</a>
             </div>
             <div class="course">
-                <img src="assets/img/courses/course_1.png" alt="">
+                <img loading="lazy" src="assets/img/courses/course_1.png" alt="">
                 <p class="course_title">Нотная грамота</p>
                 <p class="course_description">Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free
                     Watermark Remover Online также
@@ -112,7 +112,7 @@
                 <a class="button" href="#contacts">Подробнее</a>
             </div>
             <div class="course">
-                <img src="assets/img/courses/course_1.png" alt="">
+                <img loading="lazy" src="assets/img/courses/course_1.png" alt="">
                 <p class="course_title">Нотная грамота</p>
                 <p class="course_description">Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free
                     Watermark Remover Online также
@@ -163,7 +163,7 @@
     <div class="popup_content">
         <div class="popup_close" id="popup_close">✕</div>
         <div class="arrow" id="arrow_left">⯇</div>
-        <img id="modal_image" src="" alt="" title="">
+        <img loading="lazy" id="modal_image" src="" alt="" title="">
         <div class="arrow" id="arrow_right">⯈</div>
     </div>
 </div>
