--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@
     </section>
 
     <section class="gallery" id="gallerySlider">
-        <div class="gallery_row">
-            <img loading="lazy" src="assets/img/gallery/img.png" alt="" title="">
-            <img loading="lazy" src="assets/img/gallery/img_1.png" alt="" title="">
-            <img loading="lazy" src="assets/img/gallery/img_2.png" alt="" title="">
-            <img loading="lazy" src="assets/img/gallery/img_3.png" alt="" title="">
-            <img loading="lazy" src="assets/img/gallery/img_4.png" alt="" title="">
-            <img loading="lazy" src="assets/img/gallery/img_5.png" alt="" title="">
+        <div class="gallery_row gallery_row_right">
+            <img src="assets/img/gallery/img.png" alt="" title="">
+            <img src="assets/img/gallery/img_1.png" alt="" title="">
+            <img src="assets/img/gallery/img_2.png" alt="" title="">
+            <img src="assets/img/gallery/img_3.png" alt="" title="">
+            <img src="assets/img/gallery/img_4.png" alt="" title="">
+            <img src="assets/img/gallery/img_5.png" alt="" title="">
         </div>
-        <div class="gallery_row">
-            <img loading="lazy" src="assets/img/gallery/img_6.png" alt="" title="">
-            <img loading="lazy" src="assets/img/gallery/img_7.png" alt="" title="">
-            <img loading="lazy" src="assets/img/gallery/img_8.png" alt="" title="">
-            <img loading="lazy" src="assets/img/gallery/img_9.png" alt="" title="">
-            <img loading="lazy" src="assets/img/gallery/img_10.png" alt="" title="">
-            <img loading="lazy" src="assets/img/gallery/img_11.png" alt="" title="">
+        <div class="gallery_row gallery_row_left">
+            <img src="assets/img/gallery/img_6.png" alt="" title="">
+            <img src="assets/img/gallery/img_7.png" alt="" title="">
+            <img src="assets/img/gallery/img_8.png" alt="" title="">
+            <img src="assets/img/gallery/img_9.png" alt="" title="">
+            <img src="assets/img/gallery/img_10.png" alt="" title="">
+            <img src="assets/img/gallery/img_11.png" alt="" title="">
         </div>
     </section>
 
