--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/media.css">
 
+    <link rel="shortcut icon" href="assets/img/favicon/favicon32.ico" type="image/x-icon">
     <title>Виртуозы</title>
 </head>
 <body>
