--- a/index.html
+++ b/index.html
@@ -13,34 +13,53 @@
     <title>Виртуозы</title>
 </head>
 <body>
-<header>
-    <div class="header_logo_block">
-        <img loading="lazy" src="assets/img/logo.webp" alt="">
-    </div>
-    <button class="header_menu_burger" id="burger_menu_button">
-        <span class="header_menu_burger_img"></span>
-    </button>
-    <nav>
-        <a href="#courses">Услуги</a>
-        <a href="#about_us">О нас</a>
-        <a class="button" href="#contacts">Контакты</a>
-    </nav>
-</header>
-<main>
+<!--<img src="assets/img/header_bg.png" alt="" class="background_header_img">-->
+<header class="wrapper">
+    <section class="header">
+        <div class="header_logo_block">
+            <svg width="207" height="27" viewBox="0 0 207 27" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.23199 0.666019C10.512 0.666019 12.42 0.882019 13.956 1.31402C15.516 1.72202 16.68 2.40602 17.448 3.36602C18.24 4.30202 18.636 5.57402 18.636 7.18202C18.636 8.14202 18.48 9.01802 18.168 9.81002C17.856 10.602 17.4 11.25 16.8 11.754C16.224 12.258 15.516 12.582 14.676 12.726V12.906C15.54 13.074 16.32 13.374 17.016 13.806C17.712 14.238 18.264 14.862 18.672 15.678C19.08 16.494 19.284 17.574 19.284 18.918C19.284 20.478 18.9 21.822 18.132 22.95C17.388 24.054 16.308 24.906 14.892 25.506C13.476 26.082 11.796 26.37 9.85199 26.37H0.23999V0.666019H8.23199ZM8.84399 10.854C10.428 10.854 11.52 10.602 12.12 10.098C12.744 9.59402 13.056 8.86202 13.056 7.90202C13.056 6.91802 12.696 6.21002 11.976 5.77802C11.256 5.34602 10.116 5.13002 8.55599 5.13002H5.67599V10.854H8.84399ZM5.67599 15.174V21.87H9.23999C10.872 21.87 12.012 21.558 12.66 20.934C13.308 20.286 13.632 19.434 13.632 18.378C13.632 17.73 13.488 17.166 13.2 16.686C12.936 16.206 12.468 15.834 11.796 15.57C11.124 15.306 10.212 15.174 9.05999 15.174H5.67599Z"
+                      fill="white"/>
+                <path d="M24.4275 0.666019H29.3235V13.086C29.3235 13.686 29.3115 14.358 29.2875 15.102C29.2635 15.846 29.2395 16.578 29.2155 17.298C29.1915 17.994 29.1675 18.606 29.1435 19.134C29.1195 19.638 29.0955 19.986 29.0715 20.178H29.1795L41.0595 0.666019H47.5755V26.37H42.7155V14.022C42.7155 13.374 42.7275 12.666 42.7515 11.898C42.7755 11.106 42.7995 10.35 42.8235 9.63002C42.8715 8.91002 42.9075 8.28602 42.9315 7.75802C42.9795 7.20602 43.0155 6.84602 43.0395 6.67802H42.8955L30.9795 26.37H24.4275V0.666019Z"
+                      fill="white"/>
+                <path d="M62.2722 0.666019C65.5842 0.666019 67.9962 1.38602 69.5082 2.82602C71.0442 4.24202 71.8122 6.19802 71.8122 8.69402C71.8122 9.82202 71.6442 10.902 71.3082 11.934C70.9722 12.942 70.4082 13.854 69.6162 14.67C68.8482 15.462 67.8282 16.086 66.5562 16.542C65.2842 16.998 63.7122 17.226 61.8402 17.226H59.5002V26.37H54.0642V0.666019H62.2722ZM61.9842 5.13002H59.5002V12.762H61.3002C62.3322 12.762 63.2202 12.63 63.9642 12.366C64.7082 12.102 65.2842 11.682 65.6922 11.106C66.1002 10.53 66.3042 9.78602 66.3042 8.87402C66.3042 7.60202 65.9562 6.66602 65.2602 6.06602C64.5642 5.44202 63.4722 5.13002 61.9842 5.13002Z"
+                      fill="white"/>
+                <path d="M86.5697 26.37H81.1337V5.20202H74.1497V0.666019H101.5V5.20202H86.5697V26.37Z" fill="white"/>
+                <path d="M118.135 18.846C117.415 20.478 116.647 21.894 115.831 23.094C115.039 24.27 114.019 25.17 112.771 25.794C111.523 26.418 109.891 26.73 107.875 26.73C107.251 26.73 106.567 26.682 105.823 26.586C105.079 26.49 104.395 26.358 103.771 26.19V21.51C104.347 21.75 104.983 21.918 105.679 22.014C106.375 22.11 107.023 22.158 107.623 22.158C108.415 22.158 109.051 22.026 109.531 21.762C110.035 21.498 110.431 21.138 110.719 20.682C111.031 20.202 111.283 19.686 111.475 19.134L102.583 0.666019H108.343L113.131 11.79C113.251 12.03 113.395 12.342 113.563 12.726C113.731 13.11 113.899 13.506 114.067 13.914C114.235 14.322 114.367 14.682 114.463 14.994H114.643C114.739 14.706 114.859 14.358 115.003 13.95C115.171 13.518 115.339 13.086 115.507 12.654C115.699 12.198 115.867 11.802 116.011 11.466L120.475 0.666019H126.091L118.135 18.846Z"
+                      fill="white"/>
+                <path d="M152.311 13.482C152.311 15.474 152.059 17.286 151.555 18.918C151.075 20.526 150.331 21.918 149.323 23.094C148.339 24.27 147.067 25.17 145.507 25.794C143.971 26.418 142.159 26.73 140.071 26.73C137.983 26.73 136.159 26.418 134.599 25.794C133.063 25.146 131.791 24.246 130.783 23.094C129.799 21.918 129.055 20.514 128.551 18.882C128.071 17.25 127.831 15.438 127.831 13.446C127.831 10.782 128.263 8.46602 129.127 6.49802C130.015 4.53002 131.359 3.00602 133.159 1.92602C134.983 0.82202 137.299 0.27002 140.107 0.27002C142.891 0.27002 145.183 0.82202 146.983 1.92602C148.783 3.00602 150.115 4.54202 150.979 6.53402C151.867 8.50202 152.311 10.818 152.311 13.482ZM136 13.482C136 15.282 133.783 16.83 134.239 18.126C134.695 19.422 135.403 20.418 136.363 21.114C137.323 21.81 138.559 22.158 140.071 22.158C141.631 22.158 142.879 21.81 143.815 21.114C144.775 20.418 145.471 19.422 145.903 18.126C146.359 16.83 143.5 15.17 143.5 13.37C143.5 10.658 146.083 8.64602 145.075 7.11002C144.067 5.57402 142.411 4.80602 140.107 4.80602C138.571 4.80602 137.323 5.15402 136.363 5.85002C135.403 6.54602 134.695 7.54202 134.239 8.83802C133.783 10.134 136 11.682 136 13.482Z"
+                      fill="white"/>
+                <path d="M175.032 6.67802C175.032 8.40602 174.42 9.79802 173.196 10.854C171.972 11.91 170.412 12.57 168.516 12.834V12.942C170.868 13.182 172.668 13.842 173.916 14.922C175.188 15.978 175.824 17.358 175.824 19.062C175.824 20.55 175.416 21.882 174.6 23.058C173.784 24.21 172.572 25.11 170.964 25.758C169.356 26.406 167.364 26.73 164.988 26.73C163.044 26.73 161.316 26.61 159.804 26.37C158.316 26.13 157.02 25.782 155.916 25.326V20.754C156.66 21.114 157.5 21.426 158.436 21.69C159.372 21.93 160.32 22.122 161.28 22.266C162.24 22.386 163.128 22.446 163.944 22.446C166.224 22.446 167.868 22.122 168.876 21.474C169.908 20.802 170.424 19.866 170.424 18.666C170.424 17.442 169.68 16.554 168.192 16.002C166.704 15.426 164.7 15.138 162.18 15.138H159.768V10.89H161.928C163.968 10.89 165.552 10.758 166.68 10.494C167.808 10.23 168.6 9.84602 169.056 9.34202C169.512 8.83802 169.74 8.23802 169.74 7.54202C169.74 6.65402 169.344 5.95802 168.552 5.45402C167.784 4.92602 166.62 4.66202 165.06 4.66202C163.74 4.66202 162.492 4.85402 161.316 5.23802C160.164 5.62202 159.084 6.12602 158.076 6.75002L155.7 3.11402C156.588 2.53802 157.524 2.04602 158.508 1.63802C159.516 1.20602 160.62 0.882019 161.82 0.666019C163.02 0.426019 164.352 0.306019 165.816 0.306019C167.76 0.306019 169.416 0.582019 170.784 1.13402C172.152 1.68602 173.196 2.44202 173.916 3.40202C174.66 4.33802 175.032 5.43002 175.032 6.67802Z"
+                      fill="white"/>
+                <path d="M180.627 26.37V0.666019H186.063V10.53H187.827C190.203 10.53 192.159 10.866 193.695 11.538C195.231 12.21 196.359 13.134 197.079 14.31C197.823 15.486 198.195 16.83 198.195 18.342C198.195 20.022 197.823 21.462 197.079 22.662C196.335 23.862 195.183 24.786 193.623 25.434C192.087 26.058 190.095 26.37 187.647 26.37H180.627ZM187.503 21.906C189.111 21.906 190.371 21.642 191.283 21.114C192.219 20.586 192.687 19.662 192.687 18.342C192.687 17.43 192.471 16.734 192.039 16.254C191.631 15.774 191.019 15.45 190.203 15.282C189.387 15.09 188.403 14.994 187.251 14.994H186.063V21.906H187.503ZM201.327 26.37V0.666019H206.763V26.37H201.327Z"
+                      fill="white"/>
+            </svg>
+        </div>
+        <button class="header_menu_burger" id="burger_menu_button">
+            <span class="header_menu_burger_img"></span>
+        </button>
+        <nav>
+            <a href="#courses">Услуги</a>
+            <a href="#about_us">О нас</a>
+            <a class="button" href="#contacts">Контакты</a>
+        </nav>
+    </section>
+
     <section class="top_about">
         <div class="top_about_left">
             <h1>МЫ - ВИРТУОЗЫ</h1>
             <p>Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free Watermark Remover Online также
-                может помочь вам удалить логотипы, объекты, </p>
+                может помочь вам удалить логотипы, объекты</p>
             <a class="button" href="#contacts">Заказать консультацию</a>
         </div>
-        <div class="top_about_right">
-            <div class="top_about_right_img_block">
-                <img loading="lazy" src="assets/img/top_img.webp" alt="top_img">
-            </div>
-        </div>
+        <!--        <div class="top_about_right">-->
+        <!--            <div class="top_about_right_img_block">-->
+        <!--                <img loading="lazy" src="assets/img/piano_side_view.png" alt="top_img">-->
+        <!--            </div>-->
+        <!--        </div>-->
     </section>
-
+</header>
+<main>
     <section class="gallery" id="gallerySlider">
         <div class="gallery_row gallery_row_right">
             <img src="assets/img/gallery/img.png" alt="" title="">
@@ -50,113 +69,117 @@
             <img src="assets/img/gallery/img_4.png" alt="" title="">
             <img src="assets/img/gallery/img_5.png" alt="" title="">
         </div>
-        <div class="gallery_row gallery_row_left">
-            <img src="assets/img/gallery/img_6.png" alt="" title="">
-            <img src="assets/img/gallery/img_7.png" alt="" title="">
-            <img src="assets/img/gallery/img_8.png" alt="" title="">
-            <img src="assets/img/gallery/img_9.png" alt="" title="">
-            <img src="assets/img/gallery/img_10.png" alt="" title="">
-            <img src="assets/img/gallery/img_11.png" alt="" title="">
-        </div>
-    </section>
-
-    <section class="we_the_best_block" id="about_us">
-        <div class="we_the_best_block_content">
-            <h2>Мы, ВИРТУОЗЫ,<br> лучшие в своем деле</h2>
-            <p>Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free Watermark Remover Online также
-                может
-                помочь вам удалить логотипы, объекты</p>
-        </div>
     </section>
 
     <section class="course_block" id="courses">
-        <h2>Наши курсы</h2>
+        <h2 class="underline">Наши <span class="blue_text">курсы</span></h2>
         <div class="course_grid">
             <div class="course">
-                <img loading="lazy" src="assets/img/courses/course_1.png" alt="">
-                <p class="course_title">Нотная грамота</p>
-                <p class="course_description">Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free
-                    Watermark Remover Online также
-                    может помочь вам удалить логотипы, объекты</p>
-                <a class="button" href="#contacts">Подробнее</a>
+                <div class="course_content">
+                    <img loading="lazy" src="assets/img/courses/course_1.png" alt="">
+                    <p class="course_title">Нотная грамота</p>
+                    <p class="course_description">Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free
+                        Watermark Remover Online также
+                        может помочь вам удалить логотипы, объекты</p>
+                    <a class="button" href="#contacts">Подробнее</a>
+                </div>
             </div>
             <div class="course">
-                <img loading="lazy" src="assets/img/courses/course_1.png" alt="">
-                <p class="course_title">Нотная грамота</p>
-                <p class="course_description">Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free
-                    Watermark Remover Online также
-                    может помочь вам удалить логотипы, объекты</p>
-                <a class="button" href="#contacts">Подробнее</a>
+                <div class="course_content">
+                    <img loading="lazy" src="assets/img/courses/course_1.png" alt="">
+                    <p class="course_title">Нотная грамота</p>
+                    <p class="course_description">Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free
+                        Watermark Remover Online также
+                        может помочь вам удалить логотипы, объекты</p>
+                    <a class="button" href="#contacts">Подробнее</a>
+                </div>
             </div>
             <div class="course">
-                <img loading="lazy" src="assets/img/courses/course_1.png" alt="">
-                <p class="course_title">Нотная грамота</p>
-                <p class="course_description">Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free
-                    Watermark Remover Online также
-                    может помочь вам удалить логотипы, объекты</p>
-                <a class="button" href="#contacts">Подробнее</a>
+                <div class="course_content">
+                    <img loading="lazy" src="assets/img/courses/course_1.png" alt="">
+                    <p class="course_title">Нотная грамота</p>
+                    <p class="course_description">Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free
+                        Watermark Remover Online также
+                        может помочь вам удалить логотипы, объекты</p>
+                    <a class="button" href="#contacts">Подробнее</a>
+                </div>
             </div>
             <div class="course">
-                <img loading="lazy" src="assets/img/courses/course_1.png" alt="">
-                <p class="course_title">Нотная грамота</p>
-                <p class="course_description">Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free
-                    Watermark Remover Online также
-                    может помочь вам удалить логотипы, объекты</p>
-                <a class="button" href="#contacts">Подробнее</a>
+                <div class="course_content">
+                    <img loading="lazy" src="assets/img/courses/course_1.png" alt="">
+                    <p class="course_title">Нотная грамота</p>
+                    <p class="course_description">Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free
+                        Watermark Remover Online также
+                        может помочь вам удалить логотипы, объекты</p>
+                    <a class="button" href="#contacts">Подробнее</a>
+                </div>
             </div>
             <div class="course">
-                <img loading="lazy" src="assets/img/courses/course_1.png" alt="">
-                <p class="course_title">Нотная грамота</p>
-                <p class="course_description">Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free
-                    Watermark Remover Online также
-                    может помочь вам удалить логотипы, объекты</p>
-                <a class="button" href="#contacts">Подробнее</a>
+                <div class="course_content">
+                    <img loading="lazy" src="assets/img/courses/course_1.png" alt="">
+                    <p class="course_title">Нотная грамота</p>
+                    <p class="course_description">Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free
+                        Watermark Remover Online также
+                        может помочь вам удалить логотипы, объекты</p>
+                    <a class="button" href="#contacts">Подробнее</a>
+                </div>
             </div>
             <div class="course">
-                <img loading="lazy" src="assets/img/courses/course_1.png" alt="">
-                <p class="course_title">Нотная грамота</p>
-                <p class="course_description">Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free
-                    Watermark Remover Online также
-                    может помочь вам удалить логотипы, объекты</p>
-                <a class="button" href="#contacts">Подробнее</a>
+                <div class="course_content">
+                    <img loading="lazy" src="assets/img/courses/course_1.png" alt="">
+                    <p class="course_title">Нотная грамота</p>
+                    <p class="course_description">Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free
+                        Watermark Remover Online также
+                        может помочь вам удалить логотипы, объекты</p>
+                    <a class="button" href="#contacts">Подробнее</a>
+                </div>
             </div>
         </div>
     </section>
 
+    <section class="about_us wrapper" id="about_us">
+        <h2 class="underline">О нас</h2>
+        <div class="about_us_content">
+            <div class="about_us_content_description">
+                <h2>Мы лучшие в своем <span class="blue_text">деле</span></h2>
+                <p>Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free Watermark Remover Online
+                    также может помочь вам удалить логотипы, объекты</p>
+            </div>
+            <img src="assets/img/elements/about_us/about_us_right.png" alt="">
+        </div>
+    </section>
+</main>
+<footer class="wrapper">
     <section class="contacts" id="contacts">
         <div class="contacts_about">
             <h2>Контакты</h2>
             <p>Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free Watermark Remover Online также
                 может помочь вам удалить логотипы, объекты, </p>
-            <a class="button" href="#contacts">Хочу приобрести обучение</a>
         </div>
-        <hr>
         <div class="contacts_links">
             <a href="https://wa.me/7937111929929" target="_blank">
-                <div class="contacts_links_img_block">
-                    <div class="contacts_links_img"
-                         style="background-image: url('assets/img/contacts/whatsapp.png')"></div>
-                </div>
-                <p>7937111929929</p>
-            </a>
-            <a href="tel:+7937111929929" target="_blank">
                 <div class="contacts_links_img_block">
                     <div class="contacts_links_img"
                          style="background-image: url('assets/img/contacts/telephon.png')"></div>
                 </div>
                 <p>7937111929929</p>
             </a>
-            <a href="https://www.instagram.com/Virtuozy" target="_blank">
+            <a href="tel:+7937111929929" target="_blank">
                 <div class="contacts_links_img_block">
                     <div class="contacts_links_img"
                          style="background-image: url('assets/img/contacts/instagramm.png')"></div>
+                </div>
+                <p>7937111929929</p>
+            </a>
+            <a href="https://www.instagram.com/Virtuozy" target="_blank">
+                <div class="contacts_links_img_block">
+                    <div class="contacts_links_img"
+                         style="background-image: url('assets/img/contacts/whatsapp.png')"></div>
                 </div>
                 <p>@Virtuozy</p>
             </a>
         </div>
     </section>
-</main>
-<footer>
 </footer>
 
 <div class="popup" id="modal">
