--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         </div>
     </section>
 
-    <section class="course_block" id="courses">
+    <section class="course_block wrapper" id="courses" name="courses">
         <h2 class="underline">Наши <span class="blue_text">курсы</span></h2>
         <div class="course_grid">
             <div class="course">
@@ -81,7 +81,7 @@
                     <p class="course_description">Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free
                         Watermark Remover Online также
                         может помочь вам удалить логотипы, объекты</p>
-                    <a class="button" href="#contacts">Подробнее</a>
+                    <a class="button" href="#contacts">Учиться</a>
                 </div>
             </div>
             <div class="course">
@@ -91,7 +91,7 @@
                     <p class="course_description">Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free
                         Watermark Remover Online также
                         может помочь вам удалить логотипы, объекты</p>
-                    <a class="button" href="#contacts">Подробнее</a>
+                    <a class="button" href="#contacts">Учиться</a>
                 </div>
             </div>
             <div class="course">
@@ -101,7 +101,7 @@
                     <p class="course_description">Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free
                         Watermark Remover Online также
                         может помочь вам удалить логотипы, объекты</p>
-                    <a class="button" href="#contacts">Подробнее</a>
+                    <a class="button" href="#contacts">Учиться</a>
                 </div>
             </div>
             <div class="course">
@@ -111,7 +111,7 @@
                     <p class="course_description">Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free
                         Watermark Remover Online также
                         может помочь вам удалить логотипы, объекты</p>
-                    <a class="button" href="#contacts">Подробнее</a>
+                    <a class="button" href="#contacts">Учиться</a>
                 </div>
             </div>
             <div class="course">
@@ -121,7 +121,7 @@
                     <p class="course_description">Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free
                         Watermark Remover Online также
                         может помочь вам удалить логотипы, объекты</p>
-                    <a class="button" href="#contacts">Подробнее</a>
+                    <a class="button" href="#contacts">Учиться</a>
                 </div>
             </div>
             <div class="course">
@@ -131,13 +131,13 @@
                     <p class="course_description">Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free
                         Watermark Remover Online также
                         может помочь вам удалить логотипы, объекты</p>
-                    <a class="button" href="#contacts">Подробнее</a>
+                    <a class="button" href="#contacts">Учиться</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="about_us wrapper" id="about_us">
+    <section class="about_us wrapper" id="about_us" name="about_us">
         <h2 class="underline">О нас</h2>
         <div class="about_us_content">
             <div class="about_us_content_description">
@@ -149,8 +149,9 @@
         </div>
     </section>
 </main>
+
 <footer class="wrapper">
-    <section class="contacts" id="contacts">
+    <section class="contacts" id="contacts" name="contacts">
         <div class="contacts_about">
             <h2>Контакты</h2>
             <p>Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free Watermark Remover Online также
