--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
     <link rel="stylesheet" href="css/media.css">
 
     <link rel="shortcut icon" href="assets/img/favicon/favicon32.ico" type="image/x-icon">
-    <title>Виртуозы</title>
+    <title>Музыкальная студия "Виртуозы-2017"- обучение игре на фортепиано с 4 лет, репетиторство</title>
+    <meta name="description"
+          content='Музыкальная студия "Виртуозы-2017" предлагает обучение игре на фортепиано для детей с 4 лет, репетиторство для всех уровней, а также подготовку к поступлению в музыкальные учебные заведения. Профессиональные преподаватели, индивидуальный подход, музыкальная терапия и увлекательные занятия!'>
+    <meta name="keywords"
+          content="Музыка, студия, Виртуозы, обучение, фортепиано, репетиторство, профессиональные преподаватели, индивидуальный подход">
+    <meta name="robots"
+          content="index, follow">
+    <meta name="author" content="Author's Name">
 </head>
 <body>
 <!--<img src="assets/img/header_bg.png" alt="" class="background_header_img">-->
