--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
         </div>
     </section>
 
-    <section class="course_block wrapper" id="courses" name="courses">
+    <section class="course_block wrapper" id="courses">
         <h2 class="underline">Наши <span class="blue_text">курсы</span></h2>
         <div class="course_grid">
             <div class="course">
                 <div class="course_content">
-                    <img loading="lazy" src="assets/img/courses/course_1.png" alt="">
+                    <img loading="lazy" src="assets/img/courses/course.png" alt="">
                     <p class="course_title">Нотная грамота</p>
                     <p class="course_description">Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free
                         Watermark Remover Online также
@@ -93,7 +93,7 @@
             </div>
             <div class="course">
                 <div class="course_content">
-                    <img loading="lazy" src="assets/img/courses/course_1.png" alt="">
+                    <img loading="lazy" src="assets/img/courses/course.png" alt="">
                     <p class="course_title">Нотная грамота</p>
                     <p class="course_description">Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free
                         Watermark Remover Online также
@@ -103,7 +103,7 @@
             </div>
             <div class="course">
                 <div class="course_content">
-                    <img loading="lazy" src="assets/img/courses/course_1.png" alt="">
+                    <img loading="lazy" src="assets/img/courses/course.png" alt="">
                     <p class="course_title">Нотная грамота</p>
                     <p class="course_description">Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free
                         Watermark Remover Online также
@@ -113,7 +113,7 @@
             </div>
             <div class="course">
                 <div class="course_content">
-                    <img loading="lazy" src="assets/img/courses/course_1.png" alt="">
+                    <img loading="lazy" src="assets/img/courses/course.png" alt="">
                     <p class="course_title">Нотная грамота</p>
                     <p class="course_description">Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free
                         Watermark Remover Online также
@@ -123,7 +123,7 @@
             </div>
             <div class="course">
                 <div class="course_content">
-                    <img loading="lazy" src="assets/img/courses/course_1.png" alt="">
+                    <img loading="lazy" src="assets/img/courses/course.png" alt="">
                     <p class="course_title">Нотная грамота</p>
                     <p class="course_description">Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free
                         Watermark Remover Online также
@@ -133,7 +133,7 @@
             </div>
             <div class="course">
                 <div class="course_content">
-                    <img loading="lazy" src="assets/img/courses/course_1.png" alt="">
+                    <img loading="lazy" src="assets/img/courses/course.png" alt="">
                     <p class="course_title">Нотная грамота</p>
                     <p class="course_description">Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free
                         Watermark Remover Online также
@@ -144,7 +144,7 @@
         </div>
     </section>
 
-    <section class="about_us wrapper" id="about_us" name="about_us">
+    <section class="about_us wrapper" id="about_us">
         <h2 class="underline">О нас</h2>
         <div class="about_us_content">
             <div class="about_us_content_description">
@@ -158,7 +158,7 @@
 </main>
 
 <footer class="wrapper">
-    <section class="contacts" id="contacts" name="contacts">
+    <section class="contacts" id="contacts">
         <div class="contacts_about">
             <h2>Контакты</h2>
             <p>Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free Watermark Remover Online также
