--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <meta name="author" content="Author's Name">
 </head>
 <body>
-<!--<img src="assets/img/header_bg.png" alt="" class="background_header_img">-->
 <header class="wrapper">
     <section class="header">
         <div class="header_logo_block">
@@ -42,13 +41,13 @@
                       fill="white"/>
             </svg>
         </div>
-        <button class="header_menu_burger" id="burger_menu_button">
+        <button class="header_menu_burger" id="burger_menu_button" aria-label="Меню">
             <span class="header_menu_burger_img"></span>
         </button>
         <nav>
             <a href="#courses">Услуги</a>
             <a href="#about_us">О нас</a>
-            <a class="button" href="#contacts">Контакты</a>
+            <a class="button" href="#contacts" aria-label="Контакты">Контакты</a>
         </nav>
     </section>
 
@@ -57,24 +56,19 @@
             <h1>МЫ - ВИРТУОЗЫ</h1>
             <p>Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free Watermark Remover Online также
                 может помочь вам удалить логотипы, объекты</p>
-            <a class="button" href="#contacts">Заказать консультацию</a>
+            <a class="button" href="#contacts" aria-label="Контакты">Заказать консультацию</a>
         </div>
-        <!--        <div class="top_about_right">-->
-        <!--            <div class="top_about_right_img_block">-->
-        <!--                <img loading="lazy" src="assets/img/piano_side_view.png" alt="top_img">-->
-        <!--            </div>-->
-        <!--        </div>-->
     </section>
 </header>
 <main>
     <section class="gallery" id="gallerySlider">
         <div class="gallery_row gallery_row_right">
-            <img src="assets/img/gallery/img.png" alt="" title="">
-            <img src="assets/img/gallery/img_1.png" alt="" title="">
-            <img src="assets/img/gallery/img_2.png" alt="" title="">
-            <img src="assets/img/gallery/img_3.png" alt="" title="">
-            <img src="assets/img/gallery/img_4.png" alt="" title="">
-            <img src="assets/img/gallery/img_5.png" alt="" title="">
+            <img loading="lazy" src="assets/img/gallery/img.png" alt="" title="">
+            <img loading="lazy" src="assets/img/gallery/img_1.png" alt="" title="">
+            <img loading="lazy" src="assets/img/gallery/img_2.png" alt="" title="">
+            <img loading="lazy" src="assets/img/gallery/img_3.png" alt="" title="">
+            <img loading="lazy" src="assets/img/gallery/img_4.png" alt="" title="">
+            <img loading="lazy" src="assets/img/gallery/img_5.png" alt="" title="">
         </div>
     </section>
 
@@ -152,7 +146,7 @@
                 <p>Виртуозы Помимо удаления водяных знаков с изображений, ArkThinker Free Watermark Remover Online
                     также может помочь вам удалить логотипы, объекты</p>
             </div>
-            <img src="assets/img/elements/about_us/about_us_right.png" alt="">
+            <img loading="lazy" src="assets/img/elements/about_us/about_us_right.webp" alt="">
         </div>
     </section>
 </main>
@@ -168,21 +162,21 @@
             <a href="https://wa.me/7937111929929" target="_blank">
                 <div class="contacts_links_img_block">
                     <div class="contacts_links_img"
-                         style="background-image: url('assets/img/contacts/telephon.png')"></div>
+                         style="background-image: url('assets/img/contacts/telephon.webp')"></div>
                 </div>
                 <p>7937111929929</p>
             </a>
             <a href="tel:+7937111929929" target="_blank">
                 <div class="contacts_links_img_block">
                     <div class="contacts_links_img"
-                         style="background-image: url('assets/img/contacts/instagramm.png')"></div>
+                         style="background-image: url('assets/img/contacts/instagramm.webp')"></div>
                 </div>
                 <p>7937111929929</p>
             </a>
             <a href="https://www.instagram.com/Virtuozy" target="_blank">
                 <div class="contacts_links_img_block">
                     <div class="contacts_links_img"
-                         style="background-image: url('assets/img/contacts/whatsapp.png')"></div>
+                         style="background-image: url('assets/img/contacts/whatsapp.webp')"></div>
                 </div>
                 <p>@Virtuozy</p>
             </a>
