fix seo params and fix symbols

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <meta name="description"
           content='Музыкальная студия "Виртуозы-2017" предлагает обучение игре на фортепиано для детей с 4 лет, репетиторство для всех уровней, а также подготовку к поступлению в музыкальные учебные заведения. Профессиональные преподаватели, индивидуальный подход, музыкальная терапия и увлекательные занятия!'>
     <meta name="keywords"
-          content="Музыка, студия, Виртуозы, обучение, фортепиано, репетиторство, профессиональные преподаватели, индивидуальный подход">
+          content="Музыка, студия, Виртуозы, обучение, фортепиано, репетиторство, профессиональные преподаватели, индивидуальный подход, обучение, фортепиано, дети, музыка, уроки, репетитор, музыкальная студия, подготовка к поступлению, учебные заведения, особенные, ОВЗ, музыкальная терапия, творческие, способности, конкурсы, начинающие, курсы, профессиональные, дошкольники, аутизм, музыкальная академия, музыкальная школа, экзамен, дети РАС">
     <meta name="robots"
           content="index, follow">
-    <meta name="author" content="Author's Name">
+    <meta name="author" content='ИП "Виртуозы-2017"'>
 </head>
 <body>
 <header class="wrapper">
@@ -182,15 +182,18 @@
             </a>
         </div>
     </section>
+    <div class="develop_by">
+        <a href="#">© 2024 Сайт разработан ТОО Асмас</a>
+    </div>
 </footer>
 
 <div class="popup" id="modal">
     <div class="overlay"></div>
     <div class="popup_content">
-        <div class="popup_close" id="popup_close">✕</div>
-        <div class="arrow" id="arrow_left">⯇</div>
+        <div class="popup_close" id="popup_close">✖</div>
+        <div class="arrow" id="arrow_left">▼</div>
         <img loading="lazy" id="modal_image" src="" alt="" title="">
-        <div class="arrow" id="arrow_right">⯈</div>
+        <div class="arrow" id="arrow_right">▼</div>
     </div>
 </div>
 <script src="js/script.js"></script>
